<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mark.conover.crypto</groupId>
	<artifactId>secure-server</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<parent>
		<artifactId>secure-client-and-server-master</artifactId>
		<groupId>mark.conover.crypto</groupId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<properties>
		<tomcat.download.url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.59/bin/apache-tomcat-7.0.59.zip</tomcat.download.url>
		<!-- The integration test resources directory. -->
		<integrationtest.resources>${basedir}/src/integrationtest/resources</integrationtest.resources>
		<integrationtest.resources.install>${integrationtest.resources}/installation</integrationtest.resources.install>
		<integrationtest.resources.tomcat.install>${integrationtest.resources.install}/tomcat</integrationtest.resources.tomcat.install>
		<integrationtest.resources.tomcat.installDir>${project.build.directory}/tomcat</integrationtest.resources.tomcat.installDir>

		<!-- Deploy Ports -->
		<cargo.rmi.port>9993</cargo.rmi.port>
		<debug.port>8001</debug.port>
		<shutdown.port>9995</shutdown.port>
		<ajp.port>8009</ajp.port>
		<http.port>8080</http.port>
		<https.port>8443</https.port>

		<tomcat.home>${project.build.directory}/opt/tomcat/deploy</tomcat.home>
		<tomcat.server.xml>http/server.xml</tomcat.server.xml>
		<tomcat.clientauth>false</tomcat.clientauth>
		<cargo.plugin.deploy.goal>run</cargo.plugin.deploy.goal>
		<cargo.jvmargs>
			-Xms912m
			-Xmx1024m
			-XX:MaxPermSize=128m
			-Xdebug
			-Xrunjdwp:transport=dt_socket,address=${debug.port},suspend=n,server=y
			-Xnoagent
			-Djava.compiler=NONE
			-Djava.security.auth.login.config=${basedir}/src/main/resources/jaas.config
		</cargo.jvmargs>
	</properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.17</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.10</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.1.2</version>
        </dependency>           
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-tomcat-installation-resources</id>
						<!-- here the phase you need -->
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${integrationtest.resources.tomcat.installDir}</outputDirectory>
							<resources>
								<resource>
									<directory>${integrationtest.resources.tomcat.install}</directory>
									<includes>
										<include>${tomcat.server.xml}</include>
									</includes>
									<filtering>true</filtering>
								</resource>
								<resource>
									<directory>${integrationtest.resources.tomcat.install}</directory>
									<excludes>
										<exclude>${tomcat.server.xml}</exclude>
									</excludes>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.cargo</groupId>
				<artifactId>cargo-maven2-plugin</artifactId>
				<version>1.2.1</version>
				<configuration>
					<!-- Container configuration -->
					<container>
						<containerId>tomcat7x</containerId>
						<zipUrlInstaller>
							<url>${tomcat.download.url}</url>
							<downloadDir>${project.build.directory}/downloads</downloadDir>
							<extractDir>${project.build.directory}/extracts</extractDir>
						</zipUrlInstaller>
						<output>${tomcat.home}/logs/container.log</output>
						<log>${project.build.directory}/cargo/logs/cargo.log</log>
					</container>
					<configuration>
						<type>standalone</type>
						<home>${tomcat.home}</home>
						<properties>
							<cargo.jvmargs>${cargo.jvmargs}</cargo.jvmargs>
							<cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
							<cargo.tomcat.ajp.port>${ajp.port}</cargo.tomcat.ajp.port>
							<cargo.servlet.port>${http.port}</cargo.servlet.port>
							<cargo.standalone.ignoreNonExistingProperties>true</cargo.standalone.ignoreNonExistingProperties>
							<cargo.servlet.port>80</cargo.servlet.port>
							<!-- <cargo.servlet.users>consumer:pwd:consumer|producer:pwd:consumer,producer|mangui:pwd:manager-gui</cargo.servlet.users> -->
						</properties>
						<configfiles>
							<configfile>
								<file>${integrationtest.resources.tomcat.installDir}/${tomcat.server.xml}</file>
								<todir>conf</todir>
							</configfile>
						</configfiles>
					</configuration>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>